# note-gen

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
core/: __init__.py
core/config/: __init__.py  cache.py  schema.py
core/export/: __init__.py  markdown.py
core/gui/: __init__.py  app.py  main.py
core/llms/: __init__.py  concurrency.py  mm_llm.py  text_llm.py
core/note/: __init__.py  generator.py  models.py
core/screenshot/: __init__.py  ffmpeg.py  grid.py
core/subtitles/: __init__.py  loader.py  models.py
core/utils/: evidence.py  hash.py  logger.py  retry.py  secrets.py
